# Fastapi_Playground

./: .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 5b79fb2b7431_create_user_table.py
scripts/: create_module.py
src/: config.py  main.py
src/core/: logger.py
src/core/dtos/: dto_base_model.py
src/core/exception/: exception_filter.py  exceptions.py  global_exception_filter.py
src/core/middleware/: global_exception_middleware.py  response_middleware.py
src/domains/: router.py  router_aggregator.py
src/domains/user/: request_schema.py  router.py  schema.py  schema_response.py  service.py
src/entities/: user_model.py
